[gd_scene load_steps=13 format=3 uid="uid://c8bpg7j5d5ya0"]

[ext_resource type="Script" path="res://scenes/entities/enemy_small.gd" id="1_5lleb"]
[ext_resource type="Texture2D" uid="uid://bdvhti2nlac2r" path="res://assets/enemies/enemy_small.png" id="1_wq414"]
[ext_resource type="Texture2D" uid="uid://o0rnoarmmj4t" path="res://assets/enemies/explosion.png" id="2_l5gh1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_max1n"]
atlas = ExtResource("2_l5gh1")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y83f8"]
atlas = ExtResource("2_l5gh1")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i75h3"]
atlas = ExtResource("2_l5gh1")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dju0m"]
atlas = ExtResource("2_l5gh1")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j35y"]
atlas = ExtResource("2_l5gh1")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_duq41"]
atlas = ExtResource("1_wq414")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccwbm"]
atlas = ExtResource("1_wq414")
region = Rect2(0, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_2xgbx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_max1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y83f8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i75h3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dju0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j35y")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_duq41")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccwbm")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tno0o"]
size = Vector2(32, 32)

[node name="EnemySmall" type="Area2D"]
collision_layer = 4
collision_mask = 10
script = ExtResource("1_5lleb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_2xgbx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_tno0o")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(2.38419e-07, 2.38419e-07)
scale = Vector2(1.6, 1.6)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
